<resources>
    <!-- General Strings, used in more than one place -->
    <string name="app_name">CMS BPHC</string>
    <string name="powered_by_crux">Powered by Crux</string>
    <string name="please_login_to_continue">Please login to continue.</string>
    <string name="no_cached_data">No cached data. Check connection and refresh</string>
    <string name="loading_cached_data">Loading cached data. Refresh for latest</string>
    <string name="net_req_failed">Network request failed. Try again later</string>

    <!-- Main Activity Navigation Menu -->
    <string name="nav_bar_my_courses">My Courses</string>
    <string name="nav_bar_site_news">Site News</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_website">Website</string>
    <string name="nav_bar_share">Share</string>
    <string name="nav_bar_feedback">Feedback</string>
    <string name="nav_bar_about">About</string>
    <string name="nav_bar_enrol_course">Enrol</string>
    <string name="nav_bar_logout">Logout</string>
    <string name="nav_bar_more">More</string>

    <!-- My Courses -->
    <string name="upToDate">Everything is up to date</string>
    <string name="search_my_courses">Search My courses</string>
    <string name="no_my_courses">No Courses to display</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="favorite">favorite</string>
    <plurals name="noOfCoursesUpdated">
        <item quantity="one">%d Course updated</item>
        <item quantity="other">%d Courses updated</item>
    </plurals>

    <!-- Notification -->
    <string name="open_notifications">open notifications</string>
    <string name="no_notifications_to_display">No Notifications to Display</string>

    <!-- Course Sections -->
    <string name="open_course_website_on_browser">open page in browser</string>
    <string name="mark_all_as_read">mark all as read</string>
    <string name="failed_course_content_refresh">Failed to load course content.\nTap to retry.</string>

    <!-- Forum posts and Discussions -->
    <string name="no_announcements">No Announcements</string>
    <string name="no_posts_to_display">No Forum posts to display</string>
    <string name="discussion_attachments">Attachment(s)</string>
    <string name="pinned_discussion">Pinned Discussion</string>

    <!-- Course Search -->
    <string name="course_search_edit_text_hint">Enter Course Name</string>
    <string name="no_search_course_results">No courses with that name were found</string>

    <!-- Course Enrol -->
    <string name="course_enrol_category">Category</string>
    <string name="course_enrol_teachers">Teachers</string>
    <string name="course_enrol_self_enrol_button">Enrol me</string>
    <string name="course_enrol_teachers_no_info">No information available about teachers</string>
    <string name="course_enrol_confirmation_msg">Are you sure you want to enrol yourself in this course?</string>

    <!-- App Info -->
    <string name="app_info"><![CDATA[This companion app for Moodle (CMS) is open source. It provides live notifications
        on course content addition and also many essential features.<br /><br />You can use the
        <a href="https://github.com/crux-bphc/CMS-Android/issues">issues</a> tab on
        <a href="https://github.com/crux-bphc/CMS-Android">GitHub</a> to submit ideas for new features or report any
        bugs. <br />Click the logo below to visit our website.]]></string>

    <!-- Push Notification Messages -->
    <string name="push_notif_reg_failure">Failed to register with server for push notifications!</string>
    <string name="push_notif_dereg_failure">Failed to deregister from server for push notifications!</string>

    <!-- Content descriptions for generic views -->
    <string name="download_go">Download</string>
    <string name="more_options_btn">More Options</string>

    <!-- Placeholders used for previewing layouts -->
    <string name="example_student_name">Harshit Agarwal</string>
    <string name="example_id_number">f2014004</string>
    <string name="example_date">8 Feb, 1997</string>
    <string name="example_course_name">GAME THEORY AND ITS APPLICATIONS L1 SUMMER T</string>
    <string name="example_module_name">Assignment 1</string>
    <string name="example_course_section_name">Section 1</string>
    <string name="example_discussion_title">Timetable changes – 2 Second Semester 2016–17</string>
    <string name="example_discussion_prof">Instruction Division</string>
    <string name="example_discussion_attachment_name">Time table changes-2 second sem</string>
    <string name="example_course_number">BITS F314</string>
    <string name="example_course_category">Semester II – 2019–20</string>
    <string name="example_commit_hash">defaced</string>
    <string name="example_app_version_name">v1.7.0-beta.1</string>
    <string name="lorem">Lorem ipsum dolor sit amet, tale omnis ei mei, falli utinam graeco ne has. Rationibus constituto
        comprehensam ius te, mel in nusquam delicatissimi. Ne ius quidam oportere, dicat soleat option mel ei, usu
        cu minim consetetur. Mei id electram dissentias, et augue patrioque interpretaris vel.</string>
    <string name="navigate">Navigate</string>

    <string name="logout_notif_content">You have been logged out while trying to update course
        contents in the background. Open the app and login once again.</string>
    <string name="logout_notif_title">Unexpected Logout</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="addtoFavorites">Add to favorites</string>
    <string name="downloading_file">\"Downloading file - \"</string>
    <string name="invalid_course_id">Invalid course id!</string>
    <string name="cms">CMS</string>
    <string name="title_bphc">BITS Pilani, Hyderabad Campus</string>
    <string name="sign_in_prompt">Sign in with your BITS email</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="download_course_contents">Download course contents</string>
    <string name="file_description">%1$s, %2$s, %3$s</string>
    <string name="nav_bar_files">Files</string>
    <string name="delete_file_folder">Delete file/folder</string>
    <string name="delete_file_dialog_title">Delete %1$s?</string>
    <string name="delete_file_dialog_message">Deleting this %1$s will permanently delete it from your device and free about %2$s of space.</string>
    <string name="delete_file_dialog_neutral">Cancel</string>
    <string name="delete_file_dialog_positive">Delete</string>
    <string name="file">file</string>
    <string name="folder">folder</string>
    <string name="delete_file_success">Successfully deleted</string>
    <string name="delete_file_failed">Deletion failed</string>
    <string name="root_no_files">No course content has been downloaded yet.\nDownloaded course content will appear here.</string>
    <string name="no_files">No files present here.</string>
    <string name="folder_no_items_zero">No items</string>
    <string name="folder_no_items_one">1 item, %1$s</string>
    <string name="folder_no_items_many">%1$d items, %2$s</string>
</resources>
