<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_item_1">
        <item
            android:id="@+id/my_courses"
            android:checked="true"
            android:icon="@drawable/ic_book_multiple_variant"
            android:title="@string/nav_bar_my_courses" />
        <item
            android:id="@+id/site_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/nav_bar_site_news" />
        <item
            android:id="@+id/course_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_bar_search_course" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_bar_settings" />
        <item
            android:id="@+id/website"
            android:checkable="false"
            android:icon="@drawable/ic_web"
            android:title="@string/nav_bar_website" />
    </group>


    <group
        android:id="@+id/group_item_2">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_variant"
                android:title="@string/nav_bar_share" />
            <item
                android:id="@+id/issue"
                android:icon="@drawable/ic_bug"
                android:title="@string/nav_bar_feedback" />



            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_information"
                android:title="@string/nav_bar_about" />

    </group>

    <group
        android:id="@+id/group_item_3">
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_bar_logout" />
    </group>

</menu>
