<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- We have two child views, we need a viewgroup here-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="?cardBgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="crux.bphc.cms.fragments.DiscussionFragment"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/user_pic"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@null"

                    app:layout_constraintBottom_toTopOf="@id/barrier_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/example_discussion_title"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/barrier_profile_pic"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/example_discussion_prof"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="15sp"

                    app:layout_constraintBottom_toBottomOf="@id/barrier_message"
                    app:layout_constraintEnd_toStartOf="@id/modified_time"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="2.5"
                    app:layout_constraintStart_toEndOf="@id/barrier_profile_pic"
                    app:layout_constraintTop_toBottomOf="@id/subject"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/modified_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/example_date"
                    android:gravity="end"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="15sp"

                    app:layout_constraintBottom_toBottomOf="@id/barrier_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/user_name"
                    app:layout_constraintTop_toBottomOf="@id/subject" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="?dividerColor"

                    app:layout_constraintBottom_toTopOf="@id/message"
                    app:layout_constraintTop_toBottomOf="@id/barrier_message" />


                <crux.bphc.cms.widgets.HtmlTextView
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/user_pic" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="right"
                    app:constraint_referenced_ids="user_pic" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="user_pic,user_name,modified_time" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="?cardBgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/attachments"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/discussion_attachments"
                    android:textSize="20sp"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:background="?dividerColor"
                    android:layout_marginVertical="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>